hphp/test/zend/good/ext/pcre/tests/preg_replace_error2.php.expectf
*** Testing preg_replace() : error conditions ***

Arg value is: this is a string
string(64) "this is a stringthis is a stringthis is a stringthis is a string"

Arg value is: Array

Warning: Parameter mismatch, pattern is a string while replacement is an array in %s/preg_replace_error2.php on line 16
bool(false)

Catchable fatal error: Object of class stdClass could not be converted to string in %s/preg_replace_error2.php on line 19
